--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
     <div class="row">
         <div class="col-12">
-            <button type="button" class="float-right btn btn-lg btn-primary" v-on:click="setup">
-                Next &rarr;
+            <button type="button" aria-label="Confirm riding" class="float-right btn btn-lg btn-primary" v-on:click="setup">
+                &rarr;
             </button>
         </div>
     </div>
